# crate-zepub-mini

./: .devcontainer.json  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md
.github/workflows/: release.yml
derive/: Cargo.toml
derive/src/: lib.rs
lib/: Cargo.toml
lib/src/: common.rs  lib.rs  parser.rs
lib/src/epub/: common.rs  core.rs  html.rs  mod.rs  writer.rs
